static/static/css/customTypography.css
body {
  font-size: 1.3rem;
  line-height: 1.8rem;
}

h1, h2, h3, h4, h5, h6 {
  margin: 2rem 0 0.5rem;
}

h1, .logo__title {
  font-size: 2.3rem;
}

h2 {
  font-size: 2.0rem;
}

h3, .main__title {
  font-size: 1.7rem;
}

h4, .list__title {
  font-size: 1.5rem;
}

h5, table th {
  font-size: 1.4rem;
}

h6 {
  font-size: 1.3rem;
}

p, li {
  font-size: 1.3rem;
  margin: 0 0 0.5rem;
}

.list__meta {
  display: inline-block;
}

.meta__item {
  margin-inline-end: 1rem;
  display: inline-block;
}

.main__title {
  color: #e22d30;
}

.highlight pre {
  margin: 1rem 2rem 1rem 2rem;
  padding: 0;
}

.highlight pre code {
  font-size: 1.0rem;
  white-space: pre-wrap;
  margin: 0 0 0.5rem;
}

